# HowToLLM

./: .gitignore  README.md  pyproject.toml
configs/: train_config.yaml
outputs/2025-11-28/07-43-58/.hydra/: hydra.yaml
outputs/2025-11-28/07-44-58/.hydra/: config.yaml  hydra.yaml
setup/: setup.ps1  setup.sh
src/model/: mode.py  model.py
src/server/: __init__.py  app.py
src/train/: train.py
src/utils/: data.py
