[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "howtollm"
version = "0.0.1"
description = "Small scaffold for LLM experiments"
authors = [{name = "Satya Shodhaka Rekha Prabhanjan", email = "satyashodhaka66@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
  "numpy >=1.24",
  "pyyaml >=6.0",
  "tqdm >=4.64",
  "datasets >=2.0",
  "transformers >=4.30",
  "accelerate >=0.20",
  "torch",
  "torchvision",
  "torchaudio",
  "wandb >=0.15",
]

[project.scripts]
howtollm-train = "howtollm.train.train:main"

[tool.setuptools.packages.find]
where = ["src"]

# Only use pytroch index for downloading torch and use PyPI for general python dependencies
[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu124" # "https://download.pytorch.org/whl/nightly/cu126" - use this for 5000 series Nvidia gpus on linux
explicit = true

# Define the dependencies to use custom index
[tool.uv.sources]
torch = { index = "pytorch-cu" }
torchvision = { index = "pytorch-cu" }
torchaudio = { index = "pytorch-cu" }