[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "howtollm"
version = "0.0.1"
description = "Small scaffold for LLM experiments"
authors = [{name = "Satya Shodhaka Rekha Prabhanjan", email = "satyashodhaka66@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
  "numpy >=1.24",
  "pyyaml >=6.0",
  "tqdm >=4.64",
  "datasets >=2.0",
  "transformers >=4.30",
  "accelerate >=0.20",
  "wandb >=0.15",
  "hydra-core>=1.3.2",
  "mlflow>=3.1.4",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "tokenizers>=0.15.0",
  "psutil>=7.1.3",
  "pynvml>=13.0.1",
]

[project.scripts]
howtollm-train = "howtollm.train.train:main"
howtollm-serve = "server.app:main"

[tool.setuptools.packages.find]
where = ["src"]
